--- a/css/layout.module.css
+++ b/css/layout.module.css
@@ -19,12 +19,20 @@
     padding: 4rem 0;
     margin: 0 4rem 0 10rem;
   }
+
+  .viewLarge {
+    padding: 4rem 0;
+    margin: 0 0 0 10rem;
+  }
 }
 
 @media screen and (max-width: 1000px) {
   .view {
-    padding: 4rem 0;
     margin: 0 2rem 0 8rem;
+  }
+
+  .viewLarge {
+    margin: 0 0 0 8rem;
   }
 }
 
@@ -33,16 +41,28 @@
     padding: 4rem 0;
     margin: 0 1rem 0 1rem;
   }
+
+  .viewLarge {
+    margin: 0 0 0 1rem;
+  }
 }
 
 @media screen and (max-width: 550px) {
   .view {
     margin: 0 2rem 0 2rem;
   }
+
+  .viewLarge {
+    margin: 0 0 0 2rem;
+  }
 }
 
 @media screen and (max-width: 450px) {
   .view {
     margin: 0 1rem 0 1rem;
+  }
+
+  .viewLarge {
+    margin: 0 0 0 1rem;
   }
 }
