--- a/components/Create/Step3/step3.module.css
+++ b/components/Create/Step3/step3.module.css
@@ -4,7 +4,7 @@
 /* Header */
 
 .part {
-  composes: view from "../../../css/layout.module.css";
+  composes: view from '../../../css/layout.module.css';
 }
 
 .part_header {
@@ -12,20 +12,20 @@
 }
 
 .title {
-  composes: largeTitleOutline from "../../../css/typo.module.css";
+  composes: largeTitleOutline from '../../../css/typo.module.css';
   margin-bottom: 1rem;
 }
 
 .title_outline {
-  composes: largeTitle from "../../../css/typo.module.css";
+  composes: largeTitle from '../../../css/typo.module.css';
 }
 
 .title_description {
-  composes: semiBold from "../../../css/typo.module.css";
+  composes: semiBold from '../../../css/typo.module.css';
 }
 
 .subtitle {
-  composes: mediumTitle from "../../../css/typo.module.css";
+  composes: mediumTitle from '../../../css/typo.module.css';
 }
 
 .subtitle_needs {
@@ -64,7 +64,7 @@
 }
 
 .checkbox_text {
-  composes: smallCaps from "../../../css/typo.module.css";
+  composes: smallCaps from '../../../css/typo.module.css';
   margin-bottom: 1rem;
 }
 
@@ -79,7 +79,7 @@
 }
 
 .checkbox_image:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   background: inherit;
@@ -93,21 +93,21 @@
   transition: all 0.2s ease-in-out;
 }
 
-.checkbox[type="radio"]:hover ~ .checkbox_image:after {
+.checkbox[type='radio']:hover ~ .checkbox_image:after {
   top: 0;
   left: 0;
 }
 
-.checkbox[type="radio"]:checked ~ .checkbox_image:after {
+.checkbox[type='radio']:checked ~ .checkbox_image:after {
   left: 0;
   top: 0;
 }
 
-.checkbox[type="radio"]:checked ~ .checkbox_image {
+.checkbox[type='radio']:checked ~ .checkbox_image {
   background-color: blueColor;
 }
 
-.checkbox[type="radio"]:checked ~ .checkbox_image svg path {
+.checkbox[type='radio']:checked ~ .checkbox_image svg path {
   fill: beigeColor;
   stroke: blueColor;
 }
@@ -124,7 +124,7 @@
 
 .empty_add {
   margin-top: 3rem;
-  composes: semiBold from "../../../css/typo.module.css";
+  composes: semiBold from '../../../css/typo.module.css';
   grid-column: span 2;
 }
 
@@ -140,7 +140,7 @@
   border-top: none;
   border-right: none;
   border-left: none;
-  composes: empty from "../../../css/typo.module.css";
+  composes: empty from '../../../css/typo.module.css';
   padding: 0.2rem 0.5rem;
 }
 
@@ -157,12 +157,12 @@
 }
 
 .label {
-  composes: semiBold from "../../../css/typo.module.css";
+  composes: semiBold from '../../../css/typo.module.css';
   margin-bottom: 0.5rem;
 }
 
 .label_extra {
-  composes: smallText from "../../../css/typo.module.css";
+  composes: smallText from '../../../css/typo.module.css';
 }
 
 .input_voorzien {
@@ -184,11 +184,11 @@
   margin-right: 0.5rem;
 }
 
-.checkbox_voorzien[type="radio"]:checked ~ .checkbox_true {
+.checkbox_voorzien[type='radio']:checked ~ .checkbox_true {
   background-color: greenColor;
 }
 
-.checkbox_voorzien[type="radio"]:checked ~ .checkbox_false {
+.checkbox_voorzien[type='radio']:checked ~ .checkbox_false {
   background-color: redColor;
 }
 
@@ -207,11 +207,11 @@
   padding: 0.8rem 1rem;
   position: relative;
   background-color: beigeColor;
-  composes: text from "../../../css/typo.module.css";
+  composes: text from '../../../css/typo.module.css';
 }
 
 .button_voorzien:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   background: inherit;
@@ -242,7 +242,7 @@
 }
 
 .form_my__needs:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   background: inherit;
@@ -269,7 +269,7 @@
 }
 
 .need_item:nth-child(even) {
-  background-color: #e5d6c0;
+  background-color: #f3e3cb;
 }
 
 .need_types {
@@ -280,7 +280,7 @@
 }
 
 .need_type__text {
-  composes: semiBold from "../../../css/typo.module.css";
+  composes: semiBold from '../../../css/typo.module.css';
 }
 
 .need_type__text::first-letter {
@@ -306,13 +306,13 @@
 }
 
 .need_empty {
-  composes: mediumTitle from "../../../css/typo.module.css";
+  composes: mediumTitle from '../../../css/typo.module.css';
   color: #e5d6c0;
   text-align: center;
 }
 
 .need_empty__outline {
-  composes: mediumTitleOutline from "../../../css/typo.module.css";
+  composes: mediumTitleOutline from '../../../css/typo.module.css';
   -webkit-text-stroke: 0.1rem #e5d6c0;
   text-stroke: 0.1rem #e5d6c0;
 }
@@ -337,13 +337,13 @@
 }
 
 .button {
-  composes: button from "../../../css/buttons.module.css";
+  composes: button from '../../../css/buttons.module.css';
 }
 
 .circle_button {
-  composes: circleButton from "../../../css/buttons.module.css";
+  composes: circleButton from '../../../css/buttons.module.css';
 }
 
 .button_image {
-  composes: buttonImage from "../../../css/buttons.module.css";
+  composes: buttonImage from '../../../css/buttons.module.css';
 }
