--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ a {
 /* Page Loader */
 .js .loading::before,
 .js .loading::after {
-  content: "";
+  content: '';
   position: fixed;
   z-index: 1000;
 }
@@ -92,7 +92,7 @@ a {
     pointer-events: none;
     grid-template-columns: auto 1fr 1fr auto;
     grid-template-rows: auto;
-    grid-template-areas: "title demos demos links";
+    grid-template-areas: 'title demos demos links';
   }
   .frame__title {
     margin: 0 4rem 0 0;
@@ -159,13 +159,13 @@ html.has-scroll-dragging {
   min-height: 100vh;
 }
 
-[data-scroll-direction="horizontal"] [data-scroll-container] {
+[data-scroll-direction='horizontal'] [data-scroll-container] {
   /* white-space: nowrap; */
   height: 100vh;
   display: inline-block;
 }
 
-[data-scroll-direction="horizontal"] [data-scroll-section] {
+[data-scroll-direction='horizontal'] [data-scroll-section] {
   display: inline-block;
   vertical-align: top;
   white-space: nowrap;
@@ -190,14 +190,14 @@ html.has-scroll-dragging {
 .has-scroll-dragging .c-scrollbar {
   opacity: 1;
 }
-[data-scroll-direction="horizontal"] .c-scrollbar {
+[data-scroll-direction='horizontal'] .c-scrollbar {
   width: 100%;
   height: 10px;
   top: auto;
   bottom: 0;
   transform: scaleY(1);
 }
-[data-scroll-direction="horizontal"] .c-scrollbar:hover {
+[data-scroll-direction='horizontal'] .c-scrollbar:hover {
   transform: scaleY(1.3);
 }
 
@@ -217,7 +217,7 @@ html.has-scroll-dragging {
   cursor: -webkit-grabbing;
   cursor: grabbing;
 }
-[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
+[data-scroll-direction='horizontal'] .c-scrollbar_thumb {
   right: auto;
   bottom: 0;
 }
@@ -235,7 +235,7 @@ html.has-scroll-dragging {
   justify-content: space-between;
   flex-direction: column;
   z-index: 10;
-  transition: .5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 .nav-logo {
@@ -297,7 +297,7 @@ html.has-scroll-dragging {
   margin-left: -3rem;
 }
 
-.navigation:hover{
+.navigation:hover {
   width: 22rem;
 }
 
@@ -383,7 +383,6 @@ html.has-scroll-dragging {
 }
 
 @media screen and (max-width: 850px) {
-
   .nav-logo {
     display: none;
   }
@@ -391,7 +390,7 @@ html.has-scroll-dragging {
   .navigation {
     height: auto;
     width: 100vw;
-    padding: .5rem 5rem;
+    padding: 0.5rem 5rem;
     justify-content: space-between;
     flex-direction: row;
     bottom: 0;
@@ -414,10 +413,10 @@ html.has-scroll-dragging {
     width: auto;
   }
 
-  .navigation:hover{
+  .navigation:hover {
     width: 100vw;
   }
-  
+
   .nav-item--title,
   .nav-item--small {
     display: none;
