--- a/components/Empty/empty.module.css
+++ b/components/Empty/empty.module.css
@@ -20,6 +20,8 @@
   align-items: center;
   grid-column: span 3;
   z-index: 2;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .empty_state__text {
@@ -27,6 +29,7 @@
   color: #e5d6c0;
   text-align: center;
   font-size: 4rem;
+  line-height: 5rem;
 }
 
 .empty_state__text__outline {
@@ -35,6 +38,7 @@
   text-stroke: 0.1rem #e5d6c0;
   display: inline-block;
   font-size: 4rem;
+  line-height: 5rem;
 }
 
 .empty_state__buttons {
