--- a/components/Form/Step1/step1.module.css
+++ b/components/Form/Step1/step1.module.css
@@ -90,8 +90,8 @@
   background: inherit;
   border-radius: inherit;
   border: inherit;
-  top: 1.5rem;
-  left: 1.5rem;
+  top: 8%;
+  left: 8%;
   width: 100%;
   height: 100%;
   z-index: -1;
@@ -164,4 +164,60 @@
 
 .button_image {
   composes: buttonImage from "../../../css/buttons.module.css";
+}
+
+@media screen and (max-width: 1150px) {
+
+  .part_content {
+    grid-template-columns: 1fr 1fr 3fr;
+    grid-column-gap: 5rem;
+  }
+
+  .individu_image,
+.company_image {
+  padding: 7.5rem;
+}
+
+}
+
+@media screen and (max-width: 950px) {
+
+  .part_content {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .individu_image,
+.company_image {
+  padding: 7.5rem;
+}
+
+.form {
+  margin-top: 3rem;
+  grid-column: span 2;
+}
+
+}
+
+@media screen and (max-width: 550px) {
+
+  .part_content {
+    grid-column-gap: 2rem;
+  }
+
+  .individu_image,
+  .company_image {
+    padding: 5rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
+
+  .part_content {
+    grid-column-gap: 1rem;
+  }
+
+  .individu_image,
+  .company_image {
+    padding: 2rem;
+  }
 }
