--- a/components/Form/Step1/step1.module.css
+++ b/components/Form/Step1/step1.module.css
@@ -2,24 +2,24 @@
 @value blueColor, yellowColor, beigeColor from tokens;
 
 .part {
-  composes: view from "../../../css/layout.module.css";
+  composes: view from '../../../css/layout.module.css';
 }
 
 .title {
-  composes: largeTitleOutline from "../../../css/typo.module.css";
+  composes: largeTitleOutline from '../../../css/typo.module.css';
   margin-bottom: 1rem;
 }
 
 .title_outline {
-  composes: largeTitle from "../../../css/typo.module.css";
+  composes: largeTitle from '../../../css/typo.module.css';
 }
 
 .title_description {
-  composes: semiBold from "../../../css/typo.module.css";
+  composes: semiBold from '../../../css/typo.module.css';
 }
 
 .subtitle {
-  composes: mediumTitle from "../../../css/typo.module.css";
+  composes: mediumTitle from '../../../css/typo.module.css';
 }
 
 .checkbox {
@@ -27,17 +27,17 @@
 }
 
 .checkbox_text {
-  composes: smallCaps from "../../../css/typo.module.css";
+  composes: smallCaps from '../../../css/typo.module.css';
   text-align: center;
   margin-top: 2rem;
 }
 
 .label {
-  composes: semiBold from "../../../css/typo.module.css";
+  composes: semiBold from '../../../css/typo.module.css';
 }
 
 .option {
-  composes: smallCaps from "../../../css/typo.module.css";
+  composes: smallCaps from '../../../css/typo.module.css';
 }
 
 .part_header {
@@ -84,7 +84,7 @@
 
 .company_image:after,
 .individu_image::after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   background: inherit;
@@ -104,23 +104,23 @@
   left: 0;
 }
 
-.checkbox[type="radio"]:checked ~ .company_image:after {
+.checkbox[type='radio']:checked ~ .company_image:after {
   top: 0;
   left: 0;
 }
 
-.checkbox[type="radio"]:checked ~ .individu_image::after {
+.checkbox[type='radio']:checked ~ .individu_image::after {
   top: 0;
   left: 0;
 }
 
-.checkbox[type="radio"]:checked ~ .individu_image,
-.checkbox[type="radio"]:checked ~ .company_image {
+.checkbox[type='radio']:checked ~ .individu_image,
+.checkbox[type='radio']:checked ~ .company_image {
   background-color: blueColor;
 }
 
-.checkbox[type="radio"]:checked ~ .individu_image svg path,
-.checkbox[type="radio"]:checked ~ .company_image svg path {
+.checkbox[type='radio']:checked ~ .individu_image svg path,
+.checkbox[type='radio']:checked ~ .company_image svg path {
   fill: beigeColor;
   stroke: blueColor;
 }
@@ -137,7 +137,7 @@
   border-top: none;
   border-right: none;
   border-left: none;
-  composes: empty from "../../../css/typo.module.css";
+  composes: empty from '../../../css/typo.module.css';
   padding: 0.2rem 0.5rem;
 }
 
@@ -155,51 +155,46 @@
 }
 
 .button {
-  composes: button from "../../../css/buttons.module.css";
+  composes: button from '../../../css/buttons.module.css';
 }
 
 .circle_button {
-  composes: circleButton from "../../../css/buttons.module.css";
+  composes: circleButton from '../../../css/buttons.module.css';
 }
 
 .button_image {
-  composes: buttonImage from "../../../css/buttons.module.css";
+  composes: buttonImage from '../../../css/buttons.module.css';
 }
 
 @media screen and (max-width: 1150px) {
-
   .part_content {
     grid-template-columns: 1fr 1fr 3fr;
     grid-column-gap: 5rem;
   }
 
   .individu_image,
-.company_image {
-  padding: 7.5rem;
-}
-
+  .company_image {
+    padding: 7.5rem;
+  }
 }
 
 @media screen and (max-width: 950px) {
-
   .part_content {
     grid-template-columns: 1fr 1fr;
   }
 
   .individu_image,
-.company_image {
-  padding: 7.5rem;
-}
+  .company_image {
+    padding: 7.5rem;
+  }
 
-.form {
-  margin-top: 3rem;
-  grid-column: span 2;
-}
-
+  .form {
+    margin-top: 3rem;
+    grid-column: span 2;
+  }
 }
 
 @media screen and (max-width: 550px) {
-
   .part_content {
     grid-column-gap: 2rem;
   }
@@ -211,7 +206,6 @@
 }
 
 @media screen and (max-width: 450px) {
-
   .part_content {
     grid-column-gap: 1rem;
   }
@@ -219,5 +213,13 @@
   .individu_image,
   .company_image {
     padding: 2rem;
+  }
+
+  .subtitle {
+    margin: 1rem 0;
+  }
+
+  .input_container {
+    padding: 1.5rem 0;
   }
 }
