--- a/components/Form/Step2/step2.module.css
+++ b/components/Form/Step2/step2.module.css
@@ -2,27 +2,27 @@
 @value blueColor, yellowColor from tokens;
 
 .part {
-  composes: view from "../../../css/layout.module.css";
+  composes: view from '../../../css/layout.module.css';
   display: flex;
   flex-direction: column;
   height: 100%;
 }
 
 .title {
-  composes: largeTitleOutline from "../../../css/typo.module.css";
+  composes: largeTitleOutline from '../../../css/typo.module.css';
   margin-bottom: 1rem;
 }
 
 .title_outline {
-  composes: largeTitle from "../../../css/typo.module.css";
+  composes: largeTitle from '../../../css/typo.module.css';
 }
 
 .title_description {
-  composes: semiBold from "../../../css/typo.module.css";
+  composes: semiBold from '../../../css/typo.module.css';
 }
 
 .subtitle {
-  composes: mediumTitle from "../../../css/typo.module.css";
+  composes: mediumTitle from '../../../css/typo.module.css';
   grid-column: 1/5;
 }
 
@@ -35,16 +35,16 @@
 }
 
 .label {
-  composes: semiBold from "../../../css/typo.module.css";
+  composes: semiBold from '../../../css/typo.module.css';
   margin-bottom: 0.5rem;
 }
 
 .label_extra {
-  composes: smallText from "../../../css/typo.module.css";
+  composes: smallText from '../../../css/typo.module.css';
 }
 
 .option {
-  composes: smallCaps from "../../../css/typo.module.css";
+  composes: smallCaps from '../../../css/typo.module.css';
 }
 
 .form {
@@ -86,7 +86,7 @@
 }
 
 .telephone_extra {
-  composes: smallText from "../../../css/typo.module.css";
+  composes: smallText from '../../../css/typo.module.css';
   grid-column: 1/5;
 }
 
@@ -96,7 +96,7 @@
   border-top: none;
   border-right: none;
   border-left: none;
-  composes: empty from "../../../css/typo.module.css";
+  composes: empty from '../../../css/typo.module.css';
   padding: 0.2rem 0.5rem;
 }
 
@@ -117,15 +117,15 @@
 }
 
 .button {
-  composes: button from "../../../css/buttons.module.css";
+  composes: button from '../../../css/buttons.module.css';
 }
 
 .circle_button {
-  composes: circleButton from "../../../css/buttons.module.css";
+  composes: circleButton from '../../../css/buttons.module.css';
 }
 
 .button_image {
-  composes: buttonImage from "../../../css/buttons.module.css";
+  composes: buttonImage from '../../../css/buttons.module.css';
 }
 
 @keyframes rotation {
@@ -138,7 +138,7 @@
 }
 
 .button_back {
-  composes: buttonBack from "../../../css/buttons.module.css";
+  composes: buttonBack from '../../../css/buttons.module.css';
 }
 
 .back_image {
@@ -146,7 +146,7 @@
 }
 
 .back_text {
-  composes: bold from "../../../css/typo.module.css";
+  composes: bold from '../../../css/typo.module.css';
 }
 
 @media screen and (max-width: 1150px) {
@@ -155,14 +155,16 @@
     width: 100%;
     grid-template-columns: 1fr 1fr;
   }
-
-
 }
 
 @media screen and (max-width: 950px) {
-
-
-
+  .form_grid {
+    grid-column: 1/5;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-column-gap: 2rem;
+    margin-top: 3rem;
+  }
 }
 
 @media screen and (max-width: 550px) {
@@ -171,11 +173,31 @@
     flex-direction: column;
   }
 
+  .form_grid {
+    grid-template-columns: 47.5% 47.5%;
+    grid-column-gap: 5%;
+  }
 
+  .subtitle {
+    grid-column: span 2;
+  }
 
+  .input_addition {
+    grid-column: 2;
+  }
+
+  .input_housenumber {
+    grid-column: 1;
+  }
+
+  .input_addition {
+    grid-column: 2;
+  }
+
+  .telephone_extra {
+    grid-column: span 2;
+  }
 }
 
 @media screen and (max-width: 450px) {
-
-
 }
