--- a/css/layout.module.css
+++ b/css/layout.module.css
@@ -39,30 +39,30 @@
 @media screen and (max-width: 850px) {
   .view {
     padding: 4rem 0;
-    margin: 0 1rem 0 1rem;
+    margin: 0 1rem 5rem 1rem;
   }
 
   .viewLarge {
-    margin: 0 0 0 1rem;
+    margin: 0 0 5rem 1rem;
   }
 }
 
 @media screen and (max-width: 550px) {
   .view {
-    margin: 0 2rem 0 2rem;
+    margin: 0 2rem 5rem 2rem;
   }
 
   .viewLarge {
-    margin: 0 0 0 2rem;
+    margin: 0 0 5rem 2rem;
   }
 }
 
 @media screen and (max-width: 450px) {
   .view {
-    margin: 0 1rem 0 1rem;
+    margin: 0 1rem 5rem 1rem;
   }
 
   .viewLarge {
-    margin: 0 0 0 1rem;
+    margin: 0 0 5rem 1rem;
   }
 }
